fix fix fix fix

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,4 +34,4 @@ jobs:
           pylint pyei test/*.py
       - name: Test with pytest
         run: |
-          pytest --cov
+          pytest -v --cov pyei
