--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,15 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install .
           pip install -r requirements-dev.txt
-      - name: Check formatting with black
+      - name: Run linters
         run: |
-          black --line-length 100 --check .
-      - name: Type checking with mypy
-        run: |
-          mypy --ignore-missing-imports pyei
-      - name: Lint with pylint
-        run: |
-          pylint pyei test/*.py
+          ./scripts/lint.sh
       - name: Test with pytest
         run: |
-          pytest -v --cov pyei
+          ./scripts/test.sh
