--- a/.pylintrc
+++ b/.pylintrc
@@ -309,7 +309,7 @@ logging-modules=logging
 [SIMILARITIES]
 
 # Ignore comments when computing similarities.
-ignore-comments=yes
+ignore-comments=no
 
 # Ignore docstrings when computing similarities.
 ignore-docstrings=yes
