--- a/.pylintrc
+++ b/.pylintrc
@@ -62,7 +62,8 @@ confidence=
 # --disable=W".
 disable=bad-continuation,
         fixme,
-        no-else-return
+        no-else-return,
+        too-many-lines
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
