set HDF5_USE_FILE_LOCKING to false in github actions

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,6 +5,9 @@ name: Python package
 
 on: [push, pull_request]
 
+env:
+  HDF5_USE_FILE_LOCKING: FALSE
+
 jobs:
   build:
     runs-on: ubuntu-latest
