--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,5 +1,5 @@
 name: unittests & auto-publish
-on: [push, workflow_dispatch]
+on: [push, pull_request, workflow_dispatch]
 jobs:
   pytest-job:
     runs-on: ubuntu-latest
